pod-manifest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aitrain-pod
  namespace: aitrain
  labels:
    name: aitrain-pod
spec:
  containers:
  - name: jupiterlab-pytorch
    image: nvcr.io/nvidia/pytorch:22.12-py3
    command:
      - "sh"
      - "-c"
      - "jupyter lab --allow-root --ip=* --port=8888 --no-browser --NotebookApp.token='' --NotebookApp.allow_origin='*' --notebook-dir=/workspace && sleep infinity"
    ports:
    - containerPort: 8888
    livenessProbe:
      httpGet:
        path: /api
        port: 8888
      timeoutSeconds: 20
      failureThreshold: 3
      initialDelaySeconds: 300
      periodSeconds: 5
    readinessProbe:
      tcpSocket:
        port: 8888
      initialDelaySeconds: 60
      periodSeconds: 10
    #resources:
    #  limits:
    #    nvidia.com/gpu: 1
  nodeName: 10.0.10.129
