aitrain-service-2-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: aitrain-pod
  name: aitrain-service-2-lb
  namespace: aitrain
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888
  - name: http6000
    port: 6000
    protocol: TCP
    targetPort: 6000
  - name: http7860
    port: 7860
    protocol: TCP
    targetPort: 7860
  selector:
    name: aitrain-pod
  sessionAffinity: None
  type: LoadBalancer
