service2-clusterip-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: aitrain-pod
  name: aitrain-service-2-clusterip
  namespace: aitrain
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8888
  - name: http6000
    port: 6000
    targetPort: 6000
  - name: http7860
    port: 7860
    targetPort: 7860
  selector:
    name: aitrain-pod
