ingress-resource-ms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: aitrain-ingress
  namespace: aitrain
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 80
      - path: /6000
        pathType: Prefix
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 6000
      - path: /6006
        pathType: Prefix
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 6006
      - path: /7860
        pathType: Prefix
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 7860
