ingress-resource-tls-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: aitrain-ingress-app
  namespace: aitrain
spec:
  tls:
  - hosts:
    - testingress.fernando.devrocks.io
    secretName: testingress-tls-secret
  rules:
  - host: testingress.fernando.devrocks.io
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 80
      - path: /6000
        pathType: Prefix
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 6000
      - path: /6006
        pathType: Prefix
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 6006
      - path: /7860
        pathType: Prefix
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 7860
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aitrain-service-2-clusterip
            port:
              number: 80
